@@ -243,7 +243,11 @@ Print the current version number and exit successfully.
 .TP
 .B /etc/pmount.allow
 List of devices (one device per line) which are additionally permitted
-for pmounting.
+for pmounting. Globs, such as
+.I /dev/sda[123]
+are permitted. See see 
+.B glob
+(7) for a more complete syntax.
 
 .SH SEE ALSO
 
